--- a/crates/flashblocks-rpc/Cargo.toml
+++ b/crates/flashblocks-rpc/Cargo.toml
@@ -66,6 +66,7 @@ jsonrpsee-types.workspace = true
 tracing.workspace = true
 serde.workspace = true
 serde_json.workspace = true
+sonic-rs.workspace = true
 url.workspace = true
 metrics.workspace = true
 metrics-derive.workspace = true
